--- a/index.html
+++ b/index.html
@@ -23,55 +23,45 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="about/greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               회사소개 </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="about/greet.html">인사말</a>
-              <a class="dropdown-item" href="about/history.html">회사연혁</a>
-              <a class="dropdown-item" href="about/certi.html">인증현황</a>
-              <a class="dropdown-item" href="about/location.html">찾아오시는 길</a>
+              <a class="dropdown-item" href="greet.html">인사말</a>
+              <a class="dropdown-item" href="history.html">회사연혁</a>
+              <a class="dropdown-item" href="certi.html">인증현황</a>
+              <a class="dropdown-item" href="location.html">찾아오시는 길</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="business/business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               사업소개</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="business/business1.html">고농도폐수처리설비</a>
-              <a class="dropdown-item" href="business/business2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="business/business3.html">수질/악취측정대행</a>
-              <a class="dropdown-item" href="business/business4.html">환경컨설팅 및 인허가</a>
+              <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
+              <a class="dropdown-item" href="business2.html">위탁운영관리</a>
+              <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
+              <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               사업실적</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">고농도폐수처리</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">위탁운영관리</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">수질모니터링</a>
+              <a class="dropdown-item" href="work1.html">수처리공사</a>
+              <a class="dropdown-item" href="work2.html">위탁운영관리</a>
+              <a class="dropdown-item" href="work3.html">수질모니터링</a>
+              <a class="dropdown-item" href="work4.html">시운전</a>
+              <a class="dropdown-item" href="work5.html">기술개발</a>
             </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">고객센터</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
           </li>
         </ul>
       </div>
@@ -87,7 +77,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('./main-water.jpg')">
+        <div class="carousel-item active" style="background-image: url('img/main-water.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>First Slide</h3>
             <p>This is a description for the first slide.</p>
@@ -121,33 +111,29 @@
 
   <!-- Page Content -->
   <div class="container">
-
+  
     <h1 class="my-5 text-center">주흥환경 슬로건</h1>
-
+  
     <!-- Portfolio Section -->
     <h2 class="mb-4 text-center">Business</h2>
-
-    <div class="row">
+    <div class="mb-5 row">
       <div class="col-lg-3 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="business/business1.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="business1.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business/business1.html">고농도폐수처리설비</a>
+              <a href="business1.html">고농도폐수처리설비</a>
             </h4>
             <p class="card-text">고농도폐수처리설비 사업에 대한 설명입니다.</p>
-            <div class="card-footer">
-              <a href="business/business1.html" class="btn btn-primary">Learn More</a>
-            </div>
           </div>
-        </div>        
+        </div>
       </div>
       <div class="col-lg-3 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business/business2.html">위탁운영관리</a>
+              <a href="business2.html">위탁운영관리</a>
             </h4>
             <p class="card-text">위탁운영관리 사업에 대한 설명입니다.</p>
           </div>
@@ -158,7 +144,7 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business/business3.html">수질/악취측정대행</a>
+              <a href="business3.html">수질/악취측정대행</a>
             </h4>
             <p class="card-text">수질/악취측정대행 사업에 대한 설명입니다.</p>
           </div>
@@ -169,49 +155,14 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business/business4.html">환경컨설팅 및 인허가</a>
+              <a href="business4.html">환경컨설팅 및 인허가</a>
             </h4>
-            <p class="card-text">환경컨설팅 및 인허가 사업에 대한 설명입니다.</p>          
+            <p class="card-text">환경컨설팅 및 인허가 사업에 대한 설명입니다.</p>
           </div>
         </div>
       </div>
     </div>
     <!-- /.row -->
-
-    <!-- Features Section -->
-    <div class="row">
-      <div class="col-lg-6">
-        <h2>Modern Business Features</h2>
-        <p>The Modern Business template by Start Bootstrap includes:</p>
-        <ul>
-          <li>
-            <strong>Bootstrap v4</strong>
-          </li>
-          <li>jQuery</li>
-          <li>Font Awesome</li>
-          <li>Working contact form with validation</li>
-          <li>Unstyled page elements for easy customization</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-      </div>
-      <div class="col-lg-6">
-        <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
-      </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Call to Action Section -->
-    <div class="row mb-4">
-      <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-      </div>
-      <div class="col-md-4">
-        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
-      </div>
-    </div>
-
   </div>
   <!-- /.container -->
 
