--- a/sidebar.html
+++ b/sidebar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
 
@@ -95,7 +95,7 @@
     <!-- Content Row -->
     <div class="row">
       <!-- Sidebar Column -->
-      <div class="col-lg-3 mb-4">
+      <div class="col-lg-2 mb-4">
         <div class="list-group">
           <a href="index.html" class="list-group-item">Home</a>
           <a href="about.html" class="list-group-item">About</a>
