pull down navigation

--- a/business1.html
+++ b/business1.html
@@ -66,47 +66,51 @@
     </div>
   </nav>
   
-    <!-- Wrap -->
-    <div class="wrap">
-      <!-- top img -->
-      <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-        <h1 class="top-text">사업소개</h1>
-      </div> 
-      <div class="row main-content">
-        <!-- Sidebar Column -->
-        <div class="col-lg-2 mb-4">
-          <a href="greet.html" class="side-menu text-center">사업소개</a>
-          <div class="list-group">
-            <a href="greet.html" class="list-group-item">고농도폐수처리설비</a>
-            <a href="history.html" class="list-group-item">위탁운영관리</a>
-            <a href="certi.html" class="list-group-item">수질/악취측정대행</a>
-            <a href="location.html" class="list-group-item">환경컨설팅 및 인허가</a>
-          </div>
-        </div>  
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">고농도폐수처리설비
-      <small>Subheading</small>
-    </h1>
-
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="../index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
-      <li class="breadcrumb-item"><a href="./business1.html">고농도폐수처리설비</a></li>
-    </ol>
-
-    <p>Most of Start Bootstrap's unstyled templates can be directly integrated into the Modern Business template. You can view all of our unstyled templates on our website at
-      <a href="https://startbootstrap.com/template-categories/unstyled">https://startbootstrap.com/template-categories/unstyled</a>.</p>
-
+  <!-- Wrap -->
+  <div class="wrap">
+    <!-- top img -->
+    <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
+      <h1 class="top-text">사업소개</h1>
+    </div>
+    <div class="row main-content">
+      <!-- Sidebar Column -->
+      <div class="col-lg-2 mb-4">
+        <a href="greet.html" class="side-menu text-center">사업소개</a>
+        <div class="list-group">
+          <a href="greet.html" class="list-group-item">고농도폐수처리설비</a>
+          <a href="history.html" class="list-group-item">위탁운영관리</a>
+          <a href="certi.html" class="list-group-item">수질/악취측정대행</a>
+          <a href="location.html" class="list-group-item">환경컨설팅 및 인허가</a>
+        </div>
+      </div>
+  
+      <!-- Page Content -->
+      <div class="container">
+  
+        <!-- Page Heading/Breadcrumbs -->
+        <h1 class="mt-4 mb-3">고농도폐수처리설비
+          <small>Subheading</small>
+        </h1>
+  
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="../index.html">Home</a>
+          </li>
+          <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
+          <li class="breadcrumb-item"><a href="./business1.html">고농도폐수처리설비</a></li>
+        </ol>
+  
+        <p>Most of Start Bootstrap's unstyled templates can be directly integrated into the Modern Business template. You
+          can view all of our unstyled templates on our website at
+          <a
+            href="https://startbootstrap.com/template-categories/unstyled">https://startbootstrap.com/template-categories/unstyled</a>.
+        </p>
+  
+      </div>
+      <!-- /.container -->
+    </div>
   </div>
-  <!-- /.container -->
-</div>
-</div>
+
   <!-- Footer -->
   <footer class="py-4 bg-dark">
     <div class="container">
