--- a/greet.html
+++ b/greet.html
@@ -97,7 +97,7 @@
       <!-- Greet Content -->
       <div class="mb-4" id="greet-content">
         <h2 class="w7 color-B mb-3">물은 국가 경쟁력이며, 기업의 미래이자 민족의 미래입니다.</h2>
-        <h3 class="w4 mb-4">안녕하십니까? <br> <span class="w7 color-B">(주)주흥환경</span>을 방문해주신 고객 여러분께 감사드립니다.</h3>
+        <h3 class="w4 mb-4">안녕하십니까? <br> <span class="w7 color-B">주흥환경(주)</span>을 방문해주신 고객 여러분께 감사드립니다.</h3>
         <p>당사는 우수한 기술인력 양성 및 연구개발 등 투자의 중요성을 인식하고 총력을 다해 환경 우수 기업으로 거듭날 수 있도록 끊임없이 도전하며 노력하고 있습니다.
 
           쾌적한 환경 보전을 목표로 수처리 분야 하수 및 폐수의 고도처리
