--- a/index.html
+++ b/index.html
@@ -24,44 +24,61 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="greet.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="greet.html">
               회사소개 </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="greet.html">인사말</a>
-              <a class="dropdown-item" href="history.html">회사연혁</a>
-              <a class="dropdown-item" href="certi.html">인증현황</a>
-              <a class="dropdown-item" href="location.html">찾아오시는 길</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="business1.html" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="business1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업소개</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="business1.html">고농도폐수처리설비</a>
-              <a class="dropdown-item" href="business2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="business3.html">수질/악취측정대행</a>
-              <a class="dropdown-item" href="business4.html">환경컨설팅 및 인허가</a>
-            </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link" href="work1.html"
+              aria-haspopup="true" aria-expanded="true">
               사업실적</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="work1.html">수처리공사</a>
-              <a class="dropdown-item" href="work2.html">위탁운영관리</a>
-              <a class="dropdown-item" href="work3.html">수질모니터링</a>
-              <a class="dropdown-item" href="work4.html">시운전</a>
-              <a class="dropdown-item" href="work5.html">기술개발</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">고객센터</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-sub">
+        <ul class="nav-sub-list container">
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
+              <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
+              <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
+              <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="history.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="certi.html">수질/악취측정대행</a></li>
+              <li><a class="nav-sub-text" href="location.html">환경컨설팅 및 인허가</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="greet.html">수처리공사</a></li>
+              <li><a class="nav-sub-text" href="history.html">시운전</a></li>
+              <li><a class="nav-sub-text" href="certi.html">기술개발</a></li>
+            </ul>
+          </li>
+          <li class="nav-sub0">
+            <ul>
+              <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -192,6 +209,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
