pull down navi on index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse container" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="greet.html">
@@ -51,7 +51,7 @@
         </ul>
       </div>
       <div class="nav-sub">
-        <ul class="nav-sub-list container">
+        <ul class="nav-sub-list  container">
           <li class="nav-sub0">
             <ul>
               <li><a class="nav-sub-text" href="greet.html">인사말</a></li>
@@ -73,11 +73,15 @@
               <li><a class="nav-sub-text" href="greet.html">수처리공사</a></li>
               <li><a class="nav-sub-text" href="history.html">시운전</a></li>
               <li><a class="nav-sub-text" href="certi.html">기술개발</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
-          <li class="nav-sub0">
+          <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
         </ul>
