--- a/greet.html
+++ b/greet.html
@@ -68,7 +68,8 @@
   <div class="wrap">
     <!-- top img -->
     <div class="top-area mb-4" style="background-image: url(img/1company-img.jpg);">
-      <h1 class="top-text">회사소개</h1>
+      <h1>Company Info</h1>
+      <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
     </div> 
     <div class="row main-content">
       <!-- Sidebar Column -->
@@ -83,7 +84,6 @@
       </div>  
     <!-- Page Content -->
     <div class="container">
-
       <!-- Page Heading/Breadcrumbs -->
       <h1 id="sub-menu">인사말</h1>
 
@@ -94,6 +94,7 @@
         <li class="breadcrumb-item"><a href="greet.html">회사소개</a></li>
         <li class="breadcrumb-item"><a href="greet.html">인사말</a></li>
       </ol>
+
       <!-- Greet Content -->
       <div class="mb-4" id="greet-content">
         <h2 class="w7 color-B mb-3">물은 국가 경쟁력이며, 기업의 미래이자 민족의 미래입니다.</h2>
